修复参数显示错误，添加f英文翻译

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/image.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>在线图片EXIF信息查询工具 - 快速获取相机、手机拍摄参数 Photo EXIF Information Viewer</title>
+  <title>Photo EXIF Information Viewer - 在线图片EXIF信息查询工具</title>
   <meta name="description"
-    content="使用在线EXIF信息查询工具，快速读取照片中的相机品牌、手机型号、镜头信息、曝光参数、快门次数以及GPS定位信息。您的照片文件不会上传到服务器，全部操作在浏览器完成，确保安全隐私。支持 JPEG、PNG、TIFF、DNG、CR2、NEF、ARW 等格式。上传原图开始查询，获取准确的EXIF信息。">
+    content="使用在线EXIF信息查询工具，快速读取照片中的相机品牌、手机型号、镜头信息、曝光参数、快门次数以及GPS定位信息。您的照片文件不会上传到服务器，全部操作在浏览器完成，确保安全隐私。支持 JPEG、PNG、TIFF、DNG、CR2、NEF、ARW 等格式。上传原图开始查询，获取准确的EXIF信息。Use this online EXIF information viewer to quickly read camera brand, phone model, lens information, exposure parameters, shutter count, and GPS data from photos.">
   <meta name="keywords"
     content="EXIF data viewer, image EXIF information, JPEG EXIF reader, camera metadata extractor, online EXIF tool, photo metadata viewer, read EXIF data, EXIF GPS information, image properties checker, digital photo metadata, EXIF analysis tool, how to read EXIF data, smartphone EXIF information, EXIF reader online, image file metadata extraction,EXIF信息查询,图片EXIF工具,相机信息查询,手机EXIF信息,曝光参数查询,GPS定位获取,照片文件安全,无上传EXIF读取,在线EXIF分析">
   <meta name="author" content="exif.611618.xyz,Yanel">
